# asc

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build_python_dist.bat  clang_parse.cpp  clang_parse.py  cross_build.bat  cross_build.py  cross_build.sh  deps.md  parse_include_headers.py  rfc.c  test_c_cpp.md
.cargo/: config.toml
.github/workflows/: build_darwin_targets.yml  build_linux_darwin_targets.yml  build_windows_targets.yml  cross-build.yml  cross_build.yml  cross_build_on_windows.yml  pull_request.yml  release_darwin_targets.yml  release_linux_darwin_targets.yml  release_windows_targets.yml  sync_flatten_vcpkg.yml
asc_bin/: Cargo.toml  README.en-US.md  README.md  README.zh-CN.md  build.rs  pyproject.toml
asc_bin/ast/: asc.toml
asc_bin/ast/.asc/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
asc_bin/ast/.asc/ast/: CMakeLists.txt  ast-config.cmake.in  config.h.cm  flowchart.md  user.cmake  version.h.in
asc_bin/ast/src/: lib.cpp  lib.h  main.cpp
asc_bin/src/: errors.rs  main.rs
asc_bin/src/clang/: ast.rs  c_source_parser_ffi.rs  download.rs  mod.rs  parser.rs  util.rs  visitor.rs
asc_bin/src/cli/commands/: add.rs  build.rs  clean.rs  init.rs  install.rs  mod.rs  new.rs  publish.rs  remove.rs  run.rs  scan.rs  search.rs  uninstall.rs  vcpkg.rs
asc_bin/src/cmake/: build.rs  generate.rs  install.rs  lists.rs  mod.rs  path.rs  project.rs  template.rs
asc_bin/src/config/: mod.rs
asc_bin/src/config/dir/: conf.rs  data.rs  mod.rs
asc_bin/src/config/project/: data.rs  method.rs  mod.rs  path.rs
asc_bin/src/config/relative_paths/: asc.rs  cmake.rs  mod.rs  vcpkg.rs
asc_bin/src/config/system_paths/: conf.rs  data.rs  mod.rs
asc_bin/src/config/types/: json.rs  toml.rs
asc_bin/src/config/vcpkg/: manifest.rs  mod.rs  port.rs  port_json.rs  port_manifest.rs  versions_baseline.rs  versions_port.rs
asc_bin/src/config_file_types/: json.rs
asc_bin/src/dependency/: add.rs  remove.rs
asc_bin/src/git/: archive.rs  log.rs  ls_tree.rs  mod.rs  push.rs  reset.rs  rev_parse.rs  show.rs
asc_bin/src/graph/: flowchart.rs
asc_bin/src/pack/: mod.rs
asc_bin/src/templates/: export.h.hbs  lib.cpp.hbs  mod.rs  portfile.cmake.hbs  project.cmake.hbs
asc_bin/src/tests/: clang_parse.rs  config_file.rs  hbs.rs  header_sources_impl.rs
asc_bin/src/util/: deps.rs  mod.rs  shell.rs  str.rs
asc_bin/src/util/fs/: dir.rs  file.rs  path.rs
asc_bin/src/vcpkg/: add.rs  bootstrap.rs  cmake.rs  config.rs  flatten.rs  index.rs  json.rs  mod.rs  path.rs  search.rs  update.rs
ast_c/: Cargo.toml  build.rs
ast_c/src/: lib.c  lib.h
ast_r/: Cargo.toml
ast_r/src/: lib.rs
c_source_parser_ffi/: Cargo.toml  build.rs
c_source_parser_ffi/src/: clang.h  dylib.c  dylib.h  lib.c  lib.h
c_source_parser_ffi/src/rs_container_ffi/: c_str.h
config_file_derives/: Cargo.toml  README.md
config_file_derives/src/: lib.rs
config_file_macros/: Cargo.toml  README.md
config_file_macros/src/: lib.rs
config_file_types/: Cargo.toml  README.md
config_file_types/src/: lib.rs
config_file_types/src/types/: hcl.rs  json.rs  mod.rs  toml.rs  xml.rs
doc/: intro.zh-CN.md
flatten_vcpkg/: break_changes.py
rs_container_ffi/: Cargo.toml
rs_container_ffi/src/: btree_map.rs  btree_set.rs  c_str.rs  lib.rs  vec.rs
runners/: VisualStudioSetup_install_comunity_2022.bat  aarch64-pc-windows.sh  winsdksetup_install_1903.bat  x86_64-pc-windows.sh
src/: errors.rs  main.rs
src/clang/: callback.rs  mod.rs  parser.rs  visitor.rs
src/cli/: config.rs  mod.rs  parser.rs  template.rs  types.rs
src/cli/commands/: add.rs  build.rs  clean.rs  init.rs  install.rs  mod.rs  new.rs  remove.rs  run.rs  scan.rs  search.rs  uninstall.rs  vcpkg.rs
src/cmake/: build.rs  install.rs  lists.rs  mod.rs  path.rs  project.rs  template.rs
src/config/: data.rs  method.rs  mod.rs  path.rs
src/config/project/: data.rs  path.rs
src/config_file_types/: json.rs  toml.rs
src/graph/: builder.rs  flowchart.rs  gen.rs
src/ir/: callback.rs  mod.rs  parser.rs
src/tests/: cli.rs  hbs.rs
src/types/: toml.rs
src/util/: cli.rs  fs.rs  shell.rs
src/util/cli/: mod.rs  parser.rs  template.rs  types.rs
src/util/fs/: dir.rs
test_ast/: Cargo.toml  build.rs
test_ast/src/: ast.rs  main.rs
test_c_cpp/: a.cpp  asc.toml  b.cpp  c.cpp  flowchart.md  main.cpp
test_c_cpp/a/: a.c  a.cpp  a.h  a.hpp
test_c_cpp/b/: b.c  b.h  b.hpp
test_c_cpp/c/: c.cpp  c.hpp
test_c_cpp/d/: d.c  d.h  mod.hpp
test_c_cpp/src/: export.h  lib.hpp  main.cpp  test.cpp  wrapping.hpp
test_c_cpp/src/a/: a.h  a.hpp  mod.hpp
test_c_cpp/src/b/: b.h  b.hpp  mod.hpp
test_c_cpp/src/c/: c.h  c.hpp  mod.hpp
test_c_cpp/src/d/: d.cc  d.h  d.hpp
test_c_cpp_bin/src/: main.cpp
test_c_cpp_bin/src/b/: b.h  mod.hpp
test_c_cpp_bin/src/d/: d.h  mod.hpp
test_package/: asc.toml  flowchart.md
test_package/src/: lib.cpp  main.cpp
test_package/src/a/: mod.hpp
test_package/src/c/: c.h
test_source_parser/: Cargo.toml  build.rs
test_source_parser/src/: main.rs
test_sources/test_c/: asc.toml  setup.iss
test_sources/test_c/src/: add.h  lib.c  main.c  test.c  test_functions.c  test_functions.h  test_header.h  test_header1.c  test_header2.c  test_io.h  test_io1.c  test_io2.c  test_structs.c  test_structs.h  test_utils.h  test_utils1.c  test_utils2.c
test_sources/test_clang/: setup.iss
test_sources/test_clang/src/: main.c
test_sources/test_cpp_clang/src/: lib.cpp  lib.h
test_sources/test_libmpv/: asc.toml  setup.iss
test_sources/test_libmpv/src/: main.cpp  mpv_wrapper.cpp  mpv_wrapper.hpp
test_sources/test_libuv/: asc.toml  setup.iss
test_sources/test_libuv/src/: main.cpp
test_sources/test_package/: asc.toml  setup.iss
test_sources/test_package/src/: export.h  main.cpp
test_sources/test_workspace/: asc.toml  setup.iss
test_sources/test_workspace/a/: asc.toml
test_sources/test_workspace/b/: asc.toml
test_sources/tms_missing_deps/: setup.iss
test_workspace/: asc.toml
test_workspace/a/: asc.toml
test_workspace/b/: asc.toml
test_workspace/c/: asc.toml  flowchart.md
(+33 files in other folders)
