[package]
name = "asc"
version = "2024.11.13"
edition = "2021"
description = "An automated C/C++ package manager, source code scanner, and builder that streamlines dependency management, enhances code analysis, and simplifies the build process."
license = "LGPL-3.0+"

[[bin]]
name = "test_cli"
path = "src/tests/cli.rs"

[[bin]]
name = "test_header_sources_impl"
path = "src/tests/header_sources_impl.rs"

[[bin]]
name = "test_clang_parse"
path = "src/tests/clang_parse.rs"


[dependencies]
basic_trie = { version = "2.0.0", features = ["serde", "serde_crate"] }
config_file_derives = { version = "2024.11.16", path = "../config_file_derives" }
config_file_macros = { version = "2024.11.16", path = "../config_file_macros" }
config_file_types = { version = "2024.11.17", path = "../config_file_types" }
chrono = { version = "0.4.38" }
clang-sys = { version = "1.8.1", features = ["clang_10_0"] }
clap = { version = "4.5.20", features = ["derive"] }
directories = { version = "5.0.1" }
handlebars = { version = "6.1.0" }
struct_iterable = { version = "0.1.1" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.129" }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
toml = { version = "0.8.19" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }
walkdir = { version = "2.5.0" }

[build-dependencies]
bindgen = { version = "0.70.1" }
