[package]
name = "config_file_derives"
version = "2024.11.21"
edition = "2021"
description = "Automatically generate file configuration functions for the specified struct"
license = "LGPL-3.0+"
repository = "https://github.com/ascpkg/asc/tree/main/config_file_derives"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.89" }
quote = { version = "1.0.37" }
syn = { version = "2.0.85" }

