[package]
name = "rs_container_ffi"
version = "2024.11.29"
edition = "2021"
description = "Wrap Rust Vec, std::collections::{BTreeMap, BTreeSet} for C"
license = "LGPL-3.0+"
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi"]
keywords = ["ffi", "rust", "c", "container"]
repository = "https://github.com/ascpkg/asc/tree/main/rs_container_ffi"

[lib]
crate-type = ["staticlib"]

[dependencies]
